Continued cleanup of photo processing. Fix bug in Calendar where apostrophes in names were causing sql errors.

--- a/ssfl/static/css/mystyles.css
+++ b/ssfl/static/css/mystyles.css
@@ -95,4 +95,11 @@ p {
   background-color: red; !important;'
 }
 
+/* default image wrapper class to center an image in its container */
+.image-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 
