--- a/ssfl/static/gen/packed.css
+++ b/ssfl/static/gen/packed.css
@@ -832,6 +832,13 @@ p {
   background-color: red; !important;'
 }
 
+/* default image wrapper class to center an image in its container */
+.image-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
 
 
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
