--- a/ssfl/templates/base/carousel.jinja2
+++ b/ssfl/templates/base/carousel.jinja2
@@ -1,7 +1,7 @@
 {#<!-- Class devBorder and friends is in file 'mystyles.css' - comment in/out to toggle -->#}
 {% if True %}
     <container class="CAROUSEL devborder container" {{ float_dir }}>
-    {% set carousel_id = unique_id_base + 'CARO' %}
+        {% set carousel_id = unique_id_base + 'CARO' %}
         <div class="row">
             <div class="col">
                 <div id="{{ carousel_id }}" class="CAROUSEL2 devBorder2 carousel slide" data-ride="carousel"
@@ -10,12 +10,12 @@
                                  background-color: {{ carousel.background }};
                              {% endif %}">
                     {% if carousel.title and carousel.title != 'NO NAME' %}
-                        <figcaption class="{{ carousel.title_class }}">{{ carousel.title }}</figcaption>
+                        <figcaption class="title {{ carousel.title_class }}">{{ carousel.title }}</figcaption>
                     {% endif %}
                     <ol class="carousel-indicators">
                         {% for photo in carousel.pictures %}
                             <li data-target="#{{ carousel_id }}" data-slide-to="{{ loop.index }}"
-                                {% if loop.index == 0 %}class="active"{% endif %} ></li>
+                                {% if loop.index == 0 %}class="active"{% endif %}></li>
                         {% endfor %}
                     </ol>
                     <div class="CAROUSEL3 carousel-inner" role="listbox" data-interval="{{ carousel.rotation }}"
@@ -29,6 +29,7 @@
                             {% endif %}
                             {% include 'base/carousel_pic.jinja2' %}
                         {% endfor %}
+                    </div>
                     <a class="carousel-control-prev" href="#{{ carousel_id }}" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="sr-only">Previous</span>
