--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -34,8 +34,8 @@
 </head>
 <body>
 
-<div class="container-fluid text-dark" style="position: sticky; top:0px; z-index: 9999">
-    <div class="row" style="z-index: 10000">
+<div class="container-fluid" style="position: sticky; top:0px; z-index: 9999">
+    <div class="row">
         <div class=" col-12">
             {% include 'base/nav.jinja2' %}
         </div>
