--- a/ssfl/static/css/mystyles.css
+++ b/ssfl/static/css/mystyles.css
@@ -32,15 +32,9 @@ p {
 }
 
 /* Position the navbar container inside the image */
-.nav-contain {
-  position: absolute;
-  margin: 20px;
-  width: auto;
-}
-.navbar-item {
+.navbar-item nav-item {
   font-size: larger;
   font-width: bold;
-  color: black;
 }
 
 /* Set colors for Bootstrap Carousel glyphicons */
