--- a/ssfl/templates/base/carousel.jinja2
+++ b/ssfl/templates/base/carousel.jinja2
@@ -20,7 +20,7 @@
                     </ol>
                     <div class="CAROUSEL3 carousel-inner" role="listbox" data-interval="{{ carousel.rotation }}"
                          data-wrap="True"
-                         style="alignment: center">
+                         style="alignment: center; max-height:{{ carousel.height }}px; max-width:{{ carousel.width }}px;">
                         {% for photo in carousel.pictures %}
                             {% if loop.index == 1 %}
                                 {% set slide_active = 'active' %}
