--- a/ssfl/templates/main/snippet_story.jinja2
+++ b/ssfl/templates/main/snippet_story.jinja2
@@ -1,7 +1,7 @@
 {% if story.title %}
     <div class="title text-center text-wrap">{{ story.title | safe }}</div>
 {% endif %}
-<div style="max-width:{{ story.photo.width }}px; float:{{ story.photo.alignment }}">
+<div class="{{ story.photo.alignment }}" style="max-width:{{ story.photo.width }}px;">
     {% set photo = story.photo %}
     {% include 'base/picture.jinja2' %}
 </div>
