--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -48,7 +48,7 @@
                         </a>
                         <hr class="dropdown-divider">
                         <a class="dropdown-item" href="{{ url_for('admin_bp.manage_page_data') }}">
-                            Review Recent Pages
+                            Review Pages and Photos
                         </a>
                         <a class="dropdown-item" href="{{ url_for('admin_bp.sst_import_page') }}">
                             Import MS Word Page
