Added display of existing JSON templates

--- a/ssfl/templates/admin/db_display_json_data.jinja2
+++ b/ssfl/templates/admin/db_display_json_data.jinja2
@@ -29,6 +29,8 @@
                                 <td>{% include 'base/button_form.jinja2' %}</td>
                                 <td>{{ field.id }}</td>
                                 <td>{{ field.name }}</td>
+                                <td>{{ field.prototype }}</td>
+                                <td>{{ field.el_kind }}</td>
                                 <td>{{ field.last_update }}</td>
                             {% endwith %}
                         </tr>
