Add download of current database backup only, skip downloading other backup files if they already exist.

--- a/ssfl/templates/sysadmin/cloud.jinja2
+++ b/ssfl/templates/sysadmin/cloud.jinja2
@@ -42,6 +42,13 @@
                     {% include 'base/form_entry.jinja2' %}
                 {% endwith %}
 
+                {% with %}
+                    {% set el_name=form.db_only %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="Name of file to download" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
+
 
                 <div class="button">
                     <input id="submit" type="submit" value="Submit">
