--- a/ssfl/templates/sysadmin/import_database_functions.jinja2
+++ b/ssfl/templates/sysadmin/import_database_functions.jinja2
@@ -12,9 +12,16 @@
         <div class="columns">
             <h3 class="h3 text-center">Import Database Admin Functions</h3>
             <p>Only required parameters for an action are required.</p>
-            <form action="{{ url_for('admin_bp.sst_import_database') }}" method="post">
+            <form action="{{ url_for('sysadmin_bp.sst_import_database') }}" method="post">
                 {% with %}
                     {% set el_name=form.work_function %}
+                    {% set el_class="input" %}
+                    {% set el_placeholder="0000" %}
+                    {% include 'base/form_entry.jinja2' %}
+                {% endwith %}
+
+                {% with %}
+                    {% set el_name=form.local_gallery_folder %}
                     {% set el_class="input" %}
                     {% set el_placeholder="0000" %}
                     {% include 'base/form_entry.jinja2' %}
@@ -41,15 +48,15 @@
 
         </div>
         <script>
-        $ = jQuery;
-        $('#js1').change(function(){
-            $('.imp_pages').parent().hide();
-{#            $('.dp').parent().hide();#}
-{#            $('.df').parent().hide();#}
-            let opt = $('#js1 option:selected').val();
-            $('.' + opt).parent().show();
-        });
-        //# sourceURL=import_database_template.js
+            $ = jQuery;
+            $('#js1').change(function () {
+                $('.imp_pages').parent().hide();
+                {#            $('.dp').parent().hide();#}
+                {#            $('.df').parent().hide();#}
+                let opt = $('#js1 option:selected').val();
+                $('.' + opt).parent().show();
+            });
+            //# sourceURL=import_database_template.js
 
 
         </script>
