Add cool stories to nav bar

--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -19,6 +19,12 @@
             </li>
             <li class="nav-item">
                 <a class="navbar-item {{ nb_color }}"
+                   href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
+                    Cool Stories
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="navbar-item {{ nb_color }}"
                    href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
                     Activities
                 </a>
