--- a/ssfl/templates/base/carousel.jinja2
+++ b/ssfl/templates/base/carousel.jinja2
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col">
                 <div id="{{ carousel_id }}" class="CAROUSEL2 devBorder2 carousel slide" data-ride="carousel"
-                     style="width: auto; height=auto;
+                     style="width: auto; height: auto;
                              {% if carousel.background %}
                                  background-color: {{ carousel.background }};
                              {% endif %}">
