--- a/ssfl/templates/base/picture_base.jinja2
+++ b/ssfl/templates/base/picture_base.jinja2
@@ -3,7 +3,12 @@
         <figcaption class="figure-caption has-text-black {{ photo.photo_title_class }}">{{ photo.title }}</figcaption>
     {% endif %}
     <img class="{{ photo.image_class }} figure-img img-fluid rounded image-wrapper"
-         src="{{ photo.url }}" style="height:auto; width:auto;
+            {% if photo.wordpress %}
+                src="{{ photo.wp_url }}"
+            {% else %}
+                src="{{ photo.url }}"
+            {% endif %}
+         style="height:auto; width:auto;
          object-fit: cover; overflow:hidden; object-position: 50% 50%; "
          alt=" {{ photo.alt_text }}"/>
     <figcaption class="figure-caption has-text-black {{ photo.caption_class }}">{{ photo.caption }}</figcaption>
