--- a/ssfl/static/sass/sst_styles.scss
+++ b/ssfl/static/sass/sst_styles.scss
@@ -1,9 +1,12 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700');
+.bg-dark {
+  background-color: #257942;
+}
 
 
 .imagecaption {             /* Make caption size fit figure (and figure css below) */
-    padding: 3px;
+    padding: 4px;
     margin: 10px;
     float: left;
     border: 1px solid black;
@@ -42,6 +45,11 @@ button {
     word-break: break-word;
   }
 }
+
+/* Background color in calendar for Categories, Audiences */
+.sst-highlight {
+            background-color: red;
+        }
 
 
 
