--- a/ssfl/templates/base/layout.jinja2
+++ b/ssfl/templates/base/layout.jinja2
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
     <title>{{ tab_title }}</title>
 
-    {% assets "css_bundle" %}
-        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>
-    {% endassets %}
-    <link rel="stylesheet" type="text/css" href="/static/css/mystyles.css">
+{#    {% assets "css_bundle" %}#}
+{#        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>#}
+{#    {% endassets %}#}
+{#    <link rel="stylesheet" type="text/css" href="/static/css/mystyles.css">#}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
           crossorigin="anonymous">
@@ -19,10 +19,10 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
 
-    {% assets "js_bundle" %}
-        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
-    {# <script type="text/javascript" src="/static/gen/packed.js"></script>#}
+{#    {% assets "js_bundle" %}#}
+{#        <script type="text/javascript" src="{{ ASSET_URL }}"></script>#}
+{#    {% endassets %}#}
+     <script type="text/javascript" src="/static/gen/packed.js"></script>
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/dropzone/5.7.0/dropzone.min.js"></script>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
