--- a/ssfl/templates/base/nav.jinja2
+++ b/ssfl/templates/base/nav.jinja2
@@ -123,6 +123,13 @@
                     </a>
                 </div>
             </li>
+
+            <li class="nav-item">
+                <a class="navbar-item {{ nb_color }}"
+                   href="{{ url_for('main.sst_test_grid') }}">
+                    Grid
+                </a>
+            </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
